--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="前言"><a class="header" href="#前言">前言</a></h1>
+<p>本仓库是对计算机组成原理学习过程的记录，内容主要来自王道计算机组成原理考研课程。课程链接如下：</p>
+<p><a href="https://www.bilibili.com/video/BV1ps4y1d73V">王道计算机考研 计算机组成原理</a></p>
 
                     </main>
 
