--- a/中央处理器CPU.html
+++ b/中央处理器CPU.html
@@ -174,7 +174,9 @@
                 <div id="content" class="content">
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
-<h1 id="中央处理器cpu"><a class="header" href="#中央处理器cpu">中央处理器CPU</a></h1>
+<h1 id="中央处理器-cpu"><a class="header" href="#中央处理器-cpu">中央处理器 CPU</a></h1>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240530103943.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240530104444.png" alt="" /></p>
 
                     </main>
 
