--- a/存储系统.html
+++ b/存储系统.html
@@ -175,6 +175,66 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="存储系统"><a class="header" href="#存储系统">存储系统</a></h1>
+<ul>
+<li><a href="#%E5%AD%98%E5%82%A8%E7%B3%BB%E7%BB%9F%E5%9F%BA%E6%9C%AC%E6%A6%82%E5%BF%B5">存储系统基本概念</a></li>
+<li><a href="#%E4%B8%BB%E5%AD%98%E5%82%A8%E5%99%A8">主存储器</a>
+<ul>
+<li><a href="#%E4%B8%BB%E5%AD%98%E5%82%A8%E5%99%A8%E7%9A%84%E5%9F%BA%E6%9C%AC%E7%BB%84%E6%88%90">主存储器的基本组成</a></li>
+<li><a href="#sram-%E5%92%8C-dram">SRAM 和 DRAM</a></li>
+<li><a href="#%E5%8F%AA%E8%AF%BB%E5%AD%98%E5%82%A8%E5%99%A8-rom">只读存储器 ROM</a></li>
+<li><a href="#%E5%8F%8C%E7%AB%AF%E5%8F%A3-ram-%E5%92%8C%E5%A4%9A%E6%A8%A1%E5%9D%97%E5%AD%98%E5%82%A8%E5%99%A8">双端口 RAM 和多模块存储器</a></li>
+</ul>
+</li>
+<li><a href="#%E4%B8%BB%E5%AD%98%E5%82%A8%E5%99%A8%E5%92%8Ccpu">主存储器和CPU</a></li>
+<li><a href="#%E5%A4%96%E9%83%A8%E5%AD%98%E5%82%A8%E5%99%A8">外部存储器</a></li>
+<li><a href="#%E9%AB%98%E9%80%9F%E7%BC%93%E5%86%B2%E5%AD%98%E5%82%A8%E5%99%A8">高速缓冲存储器</a></li>
+<li><a href="#%E8%99%9A%E6%8B%9F%E5%AD%98%E5%82%A8">虚拟存储</a>
+<ul>
+<li><a href="#%E9%A1%B5%E5%BC%8F%E5%AD%98%E5%82%A8%E5%99%A8">页式存储器</a></li>
+<li><a href="#%E8%99%9A%E6%8B%9F%E5%AD%98%E5%82%A8%E5%99%A8">虚拟存储器</a></li>
+</ul>
+</li>
+</ul>
+<h2 id="存储系统基本概念"><a class="header" href="#存储系统基本概念">存储系统基本概念</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627200338.png" alt="" /></p>
+<h2 id="主存储器"><a class="header" href="#主存储器">主存储器</a></h2>
+<h3 id="主存储器的基本组成"><a class="header" href="#主存储器的基本组成">主存储器的基本组成</a></h3>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627200429.png" alt="" /></p>
+<h3 id="sram-和-dram"><a class="header" href="#sram-和-dram">SRAM 和 DRAM</a></h3>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627200551.png" alt="" /></p>
+<h3 id="只读存储器-rom"><a class="header" href="#只读存储器-rom">只读存储器 ROM</a></h3>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627200632.png" alt="" /></p>
+<h3 id="双端口-ram-和多模块存储器"><a class="header" href="#双端口-ram-和多模块存储器">双端口 RAM 和多模块存储器</a></h3>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627200729.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627200806.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627200940.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627201016.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627201039.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627201256.png" alt="" /></p>
+<h2 id="主存储器和cpu"><a class="header" href="#主存储器和cpu">主存储器和CPU</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627201527.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627201702.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627201745.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627201810.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627201843.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627201928.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627202009.png" alt="" /></p>
+<h2 id="外部存储器"><a class="header" href="#外部存储器">外部存储器</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627202243.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627202124.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627202152.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627202036.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627202341.png" alt="" /></p>
+<h2 id="高速缓冲存储器"><a class="header" href="#高速缓冲存储器">高速缓冲存储器</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627202427.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627203247.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627203330.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627203408.png" alt="" /></p>
+<h2 id="虚拟存储"><a class="header" href="#虚拟存储">虚拟存储</a></h2>
+<h3 id="页式存储器"><a class="header" href="#页式存储器">页式存储器</a></h3>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627203458.png" alt="" /></p>
+<h3 id="虚拟存储器"><a class="header" href="#虚拟存储器">虚拟存储器</a></h3>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627203644.png" alt="" /></p>
 
                     </main>
 
