--- a/总线操作和定时.html
+++ b/总线操作和定时.html
@@ -175,6 +175,53 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="总线操作和定时"><a class="header" href="#总线操作和定时">总线操作和定时</a></h1>
+<ul>
+<li><a href="#%E6%9C%AC%E8%8A%82%E5%9B%9E%E9%A1%BE">本节回顾</a></li>
+<li><a href="#%E6%80%BB%E7%BA%BF%E4%BC%A0%E8%BE%93%E7%9A%84%E5%9B%9B%E4%B8%AA%E9%98%B6%E6%AE%B5">总线传输的四个阶段</a></li>
+<li><a href="#%E5%90%8C%E6%AD%A5%E5%AE%9A%E6%97%B6%E6%96%B9%E5%BC%8F">同步定时方式</a></li>
+<li><a href="#%E5%BC%82%E6%AD%A5%E5%AE%9A%E6%97%B6%E6%96%B9%E5%BC%8F">异步定时方式</a></li>
+<li><a href="#%E5%8D%8A%E5%90%8C%E6%AD%A5%E9%80%9A%E4%BF%A1">半同步通信</a></li>
+<li><a href="#%E5%88%86%E7%A6%BB%E5%BC%8F%E9%80%9A%E4%BF%A1">分离式通信</a></li>
+</ul>
+<h2 id="本节回顾"><a class="header" href="#本节回顾">本节回顾</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604151433.png" alt="" /></p>
+<h2 id="总线传输的四个阶段"><a class="header" href="#总线传输的四个阶段">总线传输的四个阶段</a></h2>
+<p>总线周期的四个阶段</p>
+<p>1）申请分配阶段：由需要使用总线的主模块（或主设备）提出申请，经总线仲裁机构决定将下一传输周期的总线使用权授予某一申请者。也可将此阶段细分为传输请求和总线仲裁两个阶段。</p>
+<p>2）寻址阶段：获得使用权的主模块通过总线发出本次要访问的从模块的地址及有关命令，启动参与本次传输的从模块。</p>
+<p>3）传输阶段：主模块和从模块进行数据交换，可单向或双向进行数据传送。</p>
+<p>4）结束阶段：主模块的有关信息均从系统总线上撤除，让出总线使用权。</p>
+<p>总线定时是指总线在双方交换数据的过程中需要时间上配合关系的控制，这种控制称为总线定时，它的实质是一种协议或规则，主要分为如下四种类型：</p>
+<ul>
+<li>同步通信（同步定时方式）：由统一时钟控制数据传送</li>
+<li>异步通信（异步定时方式）：采用应答方式，没有公共时钟标准</li>
+<li>半同步通信：同步、异步结合</li>
+<li>分离式通信：充分挖掘系统总线每瞬闯的潜力</li>
+</ul>
+<h2 id="同步定时方式"><a class="header" href="#同步定时方式">同步定时方式</a></h2>
+<p>同步定时方式是指系统采用一个统一的时钟信号来协调发送和接收双方的传送定时关系。</p>
+<p>若干个时钟产生相等的时间间隔，每个间隔构成一个总线周期。</p>
+<p>在一个总线周期中，发送方和接收方可进行一次数据传送。</p>
+<p>因为采用统一的时钟，每个部件或设备发送或接收信息都在固定的总线传送周期中，一个总线的传送周期结束，下一个总线传送周期开始。</p>
+<p>优点：传送速度快，具有较高的传输速率；总线控制逻辑简单。</p>
+<p>缺点：主从设备属于强制性同步；不能及时进行数据通信的有效性检验，可靠性较差。</p>
+<p>同步通信适用于总线长度较短及总线所接部件的存取时间比较接近的系统。</p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604145437.png" alt="" /></p>
+<h2 id="异步定时方式"><a class="header" href="#异步定时方式">异步定时方式</a></h2>
+<p>异步定时方式</p>
+<p>在异步定时方式中，没有统一的时钟，也没有固定的时间间隔，完全依靠传送双方相互制约的“握手”信号来实现定时控制。</p>
+<p>主设备提出交换信息的“请求”信号，经接口传送到从设备；从设备接到主设备的请求后，通过接口向主设备发出“回答”信号。</p>
+<p>根据“请求”和“回答”信号的撤销是否互锁，分为以下3种类型。</p>
+<p>1）不互锁方式</p>
+<p>2）半互锁方式</p>
+<p>3）全互锁方式</p>
+<p>优点：总线周期长度可变，能保证两个工作速度相差很大的部件或设备之间可靠地进行信息交换，自动适应时间的配合。</p>
+<p>缺点：比同步控制方式稍复杂一些，速度比同步定时方式慢。</p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604150129.png" alt="" /></p>
+<h2 id="半同步通信"><a class="header" href="#半同步通信">半同步通信</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604150650.png" alt="" /></p>
+<h2 id="分离式通信"><a class="header" href="#分离式通信">分离式通信</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604151218.png" alt="" /></p>
 
                     </main>
 
