--- a/数制和编码.html
+++ b/数制和编码.html
@@ -175,6 +175,36 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="数制和编码"><a class="header" href="#数制和编码">数制和编码</a></h1>
+<ul>
+<li><a href="#%E8%BF%9B%E4%BD%8D%E8%AE%A1%E6%95%B0%E5%88%B6">进位计数制</a></li>
+<li><a href="#bcd-%E7%A0%81">BCD 码</a></li>
+<li><a href="#%E6%97%A0%E7%AC%A6%E5%8F%B7%E6%95%B4%E6%95%B0%E7%9A%84%E8%A1%A8%E7%A4%BA%E4%B8%8E%E8%BF%90%E7%AE%97">无符号整数的表示与运算</a></li>
+<li><a href="#%E6%9C%89%E7%AC%A6%E5%8F%B7%E6%95%B4%E6%95%B0%E7%9A%84%E8%A1%A8%E7%A4%BA%E4%B8%8E%E8%BF%90%E7%AE%97%E5%8E%9F%E7%A0%81%E5%8F%8D%E7%A0%81%E8%A1%A5%E7%A0%81">有符号整数的表示与运算——原码、反码、补码</a></li>
+<li><a href="#%E5%8E%9F%E5%8F%8D%E8%A1%A5%E7%A0%81%E7%9A%84%E7%89%B9%E6%80%A7%E5%AF%B9%E6%AF%94">原反补码的特性对比</a></li>
+<li><a href="#%E7%A7%BB%E7%A0%81">移码</a></li>
+<li><a href="#%E5%AE%9A%E7%82%B9%E5%B0%8F%E6%95%B0">定点小数</a></li>
+<li><a href="#%E5%A5%87%E5%81%B6%E6%A0%A1%E9%AA%8C%E7%A0%81">奇偶校验码</a></li>
+</ul>
+<h2 id="进位计数制"><a class="header" href="#进位计数制">进位计数制</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240608165133.png" alt="" /></p>
+<h2 id="bcd-码"><a class="header" href="#bcd-码">BCD 码</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240608170130.png" alt="" /></p>
+<h2 id="无符号整数的表示与运算"><a class="header" href="#无符号整数的表示与运算">无符号整数的表示与运算</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240608171415.png" alt="" /></p>
+<h2 id="有符号整数的表示与运算原码反码补码"><a class="header" href="#有符号整数的表示与运算原码反码补码">有符号整数的表示与运算——原码、反码、补码</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240609142741.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240609142538.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240609143846.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240609143959.png" alt="" /></p>
+<h2 id="原反补码的特性对比"><a class="header" href="#原反补码的特性对比">原反补码的特性对比</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240609144438.png" alt="" /></p>
+<h2 id="移码"><a class="header" href="#移码">移码</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240609150854.png" alt="" /></p>
+<h2 id="定点小数"><a class="header" href="#定点小数">定点小数</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240609151555.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240627193037.png" alt="" /></p>
+<h2 id="奇偶校验码"><a class="header" href="#奇偶校验码">奇偶校验码</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240609153445.png" alt="" /></p>
 
                     </main>
 
