--- a/数据的表示和运算.html
+++ b/数据的表示和运算.html
@@ -175,7 +175,7 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="数据的表示和运算"><a class="header" href="#数据的表示和运算">数据的表示和运算</a></h1>
-
+<!-- toc -->
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
