--- a/数据通路.html
+++ b/数据通路.html
@@ -175,6 +175,33 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="数据通路"><a class="header" href="#数据通路">数据通路</a></h1>
+<ul>
+<li><a href="#%E5%86%85%E9%83%A8%E6%80%BB%E7%BA%BF">内部总线</a></li>
+<li><a href="#%E4%B8%93%E7%94%A8%E6%95%B0%E6%8D%AE%E9%80%9A%E8%B7%AF%E6%96%B9%E5%BC%8F">专用数据通路方式</a></li>
+</ul>
+<h2 id="内部总线"><a class="header" href="#内部总线">内部总线</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240531181220.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240531182633.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240531183720.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240531183756.png" alt="" /></p>
+<p>不同教材中的间址周期的定义可能不同。</p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240531184021.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240531183629.png" alt="" /></p>
+<h2 id="专用数据通路方式"><a class="header" href="#专用数据通路方式">专用数据通路方式</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240531184801.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240531190014.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240531190052.png" alt="" /></p>
+<p>（4）X→MAR
+M(MAR)→MDR
+(MDR) →ALU→ACC</p>
+<p>（5）Y→MAR
+M(MAR)→MDR
+(MDR)→ALU,(ACC)→ALU
+ALU→ACC</p>
+<p>（6）Z→MAR
+(ACC)→MDR
+(MDR)→M(MAR)</p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240531185844.png" alt="" /></p>
 
                     </main>
 
