--- a/总线仲裁.html
+++ b/总线仲裁.html
@@ -175,6 +175,24 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="总线仲裁"><a class="header" href="#总线仲裁">总线仲裁</a></h1>
+<ul>
+<li><a href="#%E6%80%BB%E7%BA%BF%E4%BB%B2%E8%A3%81%E7%9A%84%E5%9F%BA%E6%9C%AC%E6%A6%82%E5%BF%B5">总线仲裁的基本概念</a></li>
+<li><a href="#%E9%9B%86%E4%B8%AD%E4%BB%B2%E8%A3%81%E6%96%B9%E5%BC%8F">集中仲裁方式</a></li>
+<li><a href="#%E5%88%86%E5%B8%83%E4%BB%B2%E8%A3%81%E6%96%B9%E5%BC%8F">分布仲裁方式</a></li>
+</ul>
+<h2 id="总线仲裁的基本概念"><a class="header" href="#总线仲裁的基本概念">总线仲裁的基本概念</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240603163158.png" alt="" /></p>
+<h2 id="集中仲裁方式"><a class="header" href="#集中仲裁方式">集中仲裁方式</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240603164209.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240603164959.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240603165332.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240603165437.png" alt="" /></p>
+<h2 id="分布仲裁方式"><a class="header" href="#分布仲裁方式">分布仲裁方式</a></h2>
+<p>特点：不需要中央仲裁器，每个潜在的主模块都有自己的仲裁器和仲裁号，多个仲裁器竞争使用总线。</p>
+<p>当设备有总线请求时，它们就把各自唯一的仲裁号发送到共享的仲裁总线上；</p>
+<p>每个仲裁器将从仲裁总线上得到的仲裁号与自己的仲裁号进行比较；</p>
+<p>如果仲裁总线上的号优先级高，则它的总线请求不予响应，并撤销它的仲裁号；</p>
+<p>最后，获胜者的仲裁号保留在仲裁总线上。</p>
 
                     </main>
 
