--- a/总线标准.html
+++ b/总线标准.html
@@ -175,6 +175,23 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="总线标准"><a class="header" href="#总线标准">总线标准</a></h1>
+<ul>
+<li><a href="#%E6%80%BB%E7%BA%BF%E6%A0%87%E5%87%86%E7%9A%84%E5%9F%BA%E6%9C%AC%E6%A6%82%E5%BF%B5">总线标准的基本概念</a></li>
+<li><a href="#%E6%80%BB%E7%BA%BF%E6%A0%87%E5%87%86%E7%9A%84%E5%8F%91%E5%B1%95">总线标准的发展</a></li>
+<li><a href="#%E4%B8%BA%E4%BD%95%E4%B8%B2%E8%A1%8C%E6%80%BB%E7%BA%BF%E5%8F%96%E4%BB%A3%E5%B9%B6%E8%A1%8C%E6%80%BB%E7%BA%BF">为何串行总线取代并行总线</a></li>
+</ul>
+<h2 id="总线标准的基本概念"><a class="header" href="#总线标准的基本概念">总线标准的基本概念</a></h2>
+<p>总线标准是国际上公布或推荐的互连各个模块的标准，它是把各种不同的模块组成计算机系统时必须遵守的规范。按总线标准设计的接口可视为通用接口，在接口的两端，任何一方只需根据总线标准的要求完成自身方面的功能要求，而无须了解对方接口的要求。</p>
+<p>根据总线在计算机系统中的位置，可分为如下几种：</p>
+<p>系统总线：通常与CPU直接相连，用于连接CPU与北桥芯片、或CPU与主存等</p>
+<p>局部总线：没有直接与CPU连接，通常是连接高速的北桥芯片，用于连接了很多重要的硬件部件（如显卡、声卡等）</p>
+<p>设备总线、通信总线：通常由南桥芯片控制，用于连接计算机与计算机，或连接计算机与外部I/O设备</p>
+<h2 id="总线标准的发展"><a class="header" href="#总线标准的发展">总线标准的发展</a></h2>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604152958.png" alt="" /></p>
+<h2 id="为何串行总线取代并行总线"><a class="header" href="#为何串行总线取代并行总线">为何串行总线取代并行总线</a></h2>
+<p>并行总线：用m根线每次传送m个比特，用高/低电平表示1/0，通常采用同步定时方式，由于线间信号干扰，因此总线工作频率不能太高。另外，各条线不能有长度差，长距离并行传输时工艺难度大。</p>
+<p>串行总线：用两根线每次传送一个比特，采用“差模信号”表示1/0，通常采用异步定时方式，总线工作频率可以很高。现在的串行总线通常基于包传输，如80bit为一个数据包，包与包之间有先后关系，因此可以用多个数据通路分别串行传输多个数据包。因此某种程度上现在的串行总线也有“并行”的特点</p>
+<p>串行总线可以有多个数据通路。</p>
 
                     </main>
 
