--- a/输入输出系统基本概念.html
+++ b/输入输出系统基本概念.html
@@ -175,6 +175,28 @@
                     <main>
                         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.4/dist/katex.min.css">
 <h1 id="输入输出系统基本概念"><a class="header" href="#输入输出系统基本概念">输入输出系统基本概念</a></h1>
+<ul>
+<li><a href="#%E8%BE%93%E5%85%A5%E8%BE%93%E5%87%BA%E7%B3%BB%E7%BB%9F%E4%B8%8E-io-%E6%8E%A7%E5%88%B6%E6%96%B9%E5%BC%8F">输入输出系统与 I/O 控制方式</a></li>
+<li><a href="#%E5%A4%96%E9%83%A8%E8%AE%BE%E5%A4%87">外部设备</a></li>
+</ul>
+<h2 id="输入输出系统与-io-控制方式"><a class="header" href="#输入输出系统与-io-控制方式">输入输出系统与 I/O 控制方式</a></h2>
+<p>I/O 设备就是可以将数据输入到计算机，或者可以接收计算机输出数据的外部设备</p>
+<p>I/O接口：又称I/O控制器（I/O Controller）、设备控制器，负责协调主机与外部设备之间的数据传输</p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604182025.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604182211.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604182342.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604182503.png" alt="" /></p>
+<p>通道是具有特殊功能的处理器，能对I/O设备进行统一管理。</p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604182925.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604183233.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604183636.png" alt="" /></p>
+<h2 id="外部设备"><a class="header" href="#外部设备">外部设备</a></h2>
+<p>输入设备：鼠标、键盘</p>
+<p>输出设备：显示器、打印机</p>
+<p>外存储器：磁盘存储器、磁盘阵列、光盘存储器、固态硬盘</p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604184440.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604184243.png" alt="" /></p>
+<p><img src="https://cdn.jsdelivr.net/gh/Rosefinch-Midsummer/MyImagesHost03/img/20240604184850.png" alt="" /></p>
 
                     </main>
 
